--- a/app/src/main/res/layout/fragment_crime_list.xml
+++ b/app/src/main/res/layout/fragment_crime_list.xml
@@ -12,7 +12,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/crime_recycle_view">
     </android.support.v7.widget.RecyclerView>
-
+<!--Challenge 3: Create a linear layout that contains a text view and a button which will appear when there is no crime-->
 <LinearLayout
     android:orientation="vertical"
     android:layout_width="wrap_content"
