--- a/app/src/main/res/layout-land/fragment_crime.xml
+++ b/app/src/main/res/layout-land/fragment_crime.xml
@@ -38,6 +38,13 @@
             android:layout_height="wrap_content"
             android:text="@string/crime_solved_label"
             android:layout_weight="1" />
+
+    </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,10 +54,18 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/call_suspect"
+            android:layout_weight="1"
+            android:text="@string/call_suspect"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/crime_report"
             android:layout_weight="1"
             android:text="@string/crime_report_text"/>
-    </LinearLayout>
+        </LinearLayout>
+
 
 
 </LinearLayout>
